# posts_to_blog

./: .gitignore  README.md  categorize_posts.py  curate_posts.py  fix_categories.py  pyproject.toml  tweets_to_hugo.py
engines/: bedrock.yaml  vertexai.yaml
modules/: ai.py  bedrock.py  engine.py  post.py  vertexai.py
prompts/: categorize.yaml  label-cultura.yaml
