[tool.poetry]
name = "posts-to-blog"
version = "0.1.0"
description = "Convert social media posts to blog posts"
authors = ["Manuel Rabade <manuel@rabade.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dacite = "^1.8.1"
pyyaml = "^6.0.2"
pytz = "^2024.2"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
